# kanjisabi

./: Cargo.toml  README.md
examples/: lindera.rs  qt_overlay.rs  sdl2_overlay.rs  sdl_overlay.rs  tesseract_on_the_fly.rs  x11-overlay.rs  x11-sdl2_mix.rs  x11_overlay.rs
examples/overlay/: qt.rs
morph/: Cargo.toml
morph/src/: lib.rs
morph_client/: Cargo.toml
morph_client/src/: lib.rs
morph_server/: Cargo.toml
morph_server/examples/: lindera.rs
morph_server/src/: lib.rs  main.rs
proto/: Cargo.toml  build.rs
proto/proto/: api.proto
src/: lib.rs  main.rs
src/config/: mod.rs
src/fonts/: mod.rs
src/hotkey/: mod.rs
src/morph/: mod.rs
src/ocr/: mod.rs
src/ocr/jpn/: mod.rs
src/overlay/: mod.rs  sdl.rs  x11.rs
src/qt/: mod.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: server_api.rs
ui/: Cargo.toml
ui/examples/: fontconfig.rs  jmdict.rs  sdl2_overlay.rs  tesseract_on_the_fly.rs  x11-sdl2_mix.rs  x11_overlay.rs
ui/examples/overlay/: mod.rs  qt.rs
ui/src/: lib.rs  main.rs  morph_client.rs
ui/src/config/: mod.rs
ui/src/fonts/: mod.rs
ui/src/ocr/: mod.rs
ui/src/ocr/jpn/: mod.rs
ui/src/overlay/: mod.rs  sdl.rs  x11.rs
