[package]
name = "kanjisabi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
device_query = "1.0"
fontconfig = "0.5"
image = "0.24"
jmdict = "2.0"
libc = "0.2"
screenshot = { git = "https://github.com/makemeunsee/screenshot-rs" }
sdl2-sys = "0.35"
tauri-hotkey = "0.1"
tesseract = "0.11"
tesseract-sys = "0.5"

[dev-dependencies]
qt_widgets = "0.5"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf"]

[dependencies.x11rb]
version = "0.9"
default-features = false
features = ["xfixes"]
