[package]
name = "morph_client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
proto = { path = "../proto" }
tonic = "0.8"
tokio = { version = "1.21", features = ["full"] }
