[package]
name = "morph_server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
proto = { path = "../proto" }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.8"
tokio = { version = "1", features = ["full"] }

[features]
default = ["unidic"]
unidic = []
ipadic = []
