[package]
name = "tests"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
morph_client = { path = "../morph_client" }
morph_server = { path = "../morph_server" }
proto = { path = "../proto" }
tokio = { version = "1.21", features = ["full"] }
